--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -1,206 +1,183 @@
 <!DOCTYPE html>
-<html
-  lang="en"
-  th:replace="~{base :: parent(~{::#content},~{::title},~{::script})}"
->
-  <head>
-    <title>Add Contact</title>
-  </head>
-  <body>
-    <div id="content">
-      <!-- sidebar -->
+<html lang="en" th:replace="~{base :: parent(~{::#content},~{::title},~{::script})}">
 
-      <!-- user is logged in : sidebar -->
-      <div th:if="${loggedInUser}">
-        <div data-th-replace="~{user/sidebar :: sidebar}"></div>
-      </div>
-      <div class=" flex justify-center   pt-16"> 
-        <div class="" style="width: max-content">
-          <div class="grid grid-cols-10">
-            <div class="col-span-3 pt-4"></div>
-            <div class="col-span-12 md:col-span-6 ">
-              <div
-                class="card block p-16 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
-              >
-                <h1 class=" pt-2 text-2xl font-semibold p-5">Add New Contact</h1>
-                <p class="text-gray-500 p-5">
-                  This contact will be stored on cloud, you can direct email
-                  this client from scm.
-                </p>
+<head>
+  <title>Add Contact</title>
+</head>
 
-                <form action="" class="mt-8 p-6">
-                  <!-- name form -->
-                  <div class="mb-3">
-                    <label
-                      for="input-group-1"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                      >Contact Name</label
-                    >
-                    <div class="relative mb-6 ">
-                    
-                      <input
-                        type="text"
-                        id="input-group-1"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                        placeholder="name"
-                      />
-                    </div>
+<body>
+  <div id="content">
+    <!-- sidebar -->
+
+    <!-- user is logged in : sidebar -->
+    <div th:if="${loggedInUser}">
+      <div data-th-replace="~{user/sidebar :: sidebar}"></div>
+    </div>
+    <div class=" flex justify-center   pt-16">
+      <div class="" style="width: max-content">
+        <div class="grid grid-cols-10">
+          <div class="col-span-3 pt-4"></div>
+          <div class="col-span-12 md:col-span-6 ">
+            <div
+              class="card block p-16 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+              <div data-th-replace="message::messagebox"></div>
+              <h1 class=" pt-2 text-2xl font-semibold p-5">Add New Contact</h1>
+              <p class="text-gray-500 p-5">
+                This contact will be stored on cloud, you can direct email
+                this client from scm.
+              </p>
+
+              <form action="" class="mt-8 p-6" data-th-action="@{'/user/contacts/add'}" data-th-object="${contactForm}"
+                method="post">
+                <!-- name form -->
+                <div class="mb-3">
+                  <label for="input-group-1"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact Name</label>
+                  <div class="relative mb-6 ">
+
+                    <input type="text" data-th-field="*{name}"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                      placeholder="name" />
                   </div>
+                  <p
+                    class="text-red-500"
+                    data-th-if="${#fields.hasErrors('name')}"
+                    data-th-errors="*{name}"
+                  >
+                    Invalid Name
+                  </p>
+                </div>
 
-                  <!-- email form -->
-                  <div class="mb-3">
-                    <label
-                      for="input-group-1"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                      >Contact Email</label
-                    >
-                    <div class="relative mb-6">
-                     
-                      <input
-                        type="text"
-                        id="input-group-1"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                        placeholder="example@gmail.com"
-                      />
-                    </div>
+                <!-- email form -->
+                <div class="mb-3">
+                  <label for="input-group-1"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact Email</label>
+                  <div class="relative mb-6">
+
+                    <input type="text" data-th-field="*{email}"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                      placeholder="example@gmail.com" />
                   </div>
+                  <p
+                    class="text-red-500"
+                    data-th-if="${#fields.hasErrors('email')}"
+                    data-th-errors="*{email}"
+                  >
+                    Invalid Name
+                  </p>
+                </div>
 
-                  <!-- phone number  -->
-                  <div class="mb-3">
-                    <label
-                      for="input-group-1"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                      >Contact Phone</label
-                    >
-                    <div class="relative mb-6">
-                     
-                      <input
-                        type="text"
-                        id="input-group-1"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                        placeholder="9823525525"
-                      />
-                    </div>
+                <!-- phone number  -->
+                <div class="mb-3">
+                  <label for="input-group-1"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact Phone</label>
+                  <div class="relative mb-6">
+
+                    <input type="text" data-th-field="*{phoneNumber}"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                      placeholder="9823525525" />
                   </div>
+                  <p
+                    class="text-red-500"
+                    data-th-if="${#fields.hasErrors('phoneNumber')}"
+                    data-th-errors="*{phoneNumber}"
+                  >
+                    Invalid Name
+                  </p>
+                </div>
 
-                  <!-- address -->
+                <!-- address -->
 
-                  <div class="mb-3">
-                    <label
-                      for="message"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                      >Contact Address</label
-                    >
-                    <textarea
-                      id="message"
-                      rows="4"
-                      class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                      placeholder="Address of the contact"
-                    ></textarea>
-                  </div>
+                <div class="mb-3">
+                  <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact
+                    Address</label>
+                  <textarea data-th-field="*{address}" rows="4"
+                    class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    placeholder="Address of the contact"></textarea>
+                    <p
+                    class="text-red-500"
+                    data-th-if="${#fields.hasErrors('address')}"
+                    data-th-errors="*{address}"
+                  >
+                    Invalid Name
+                  </p>
+                </div>
 
-                  <!-- description -->
+                <!-- description -->
 
-                  <div class="mb-3">
-                    <label
-                      for="message"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                      >Contact Description</label
-                    >
-                    <textarea
-                      id="message"
-                      rows="4"
-                      class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                      placeholder="Write about your contact"
-                    ></textarea>
-                  </div>
+                <div class="mb-3">
+                  <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact
+                    Description</label>
+                  <textarea data-th-field="*{description}" rows="4"
+                    class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    placeholder="Write about your contact"></textarea>
+                </div>
 
-                  <!-- social links -->
-                  <div class="flex space-x-3 mb-3">
-                    <div class="w-full">
-                      <!-- website  link  -->
-                      <div class="mb-3">
-                        <div class="relative mb-6">
-                          
-                          <input
-                            type="text"
-                            id="input-group-1"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                            placeholder="htt://learncodewithdurgesh.com/"
-                          />
-                        </div>
-                      </div>
-                    </div>
-                    <div class="w-full">
-                      <!-- linkedin  link  -->
-                      <div class="mb-3">
-                        <div class="relative mb-6">
-                         
-                          <input
-                            type="text"
-                            id="input-group-1"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                            placeholder="htt://learncodewithdurgesh.com/"
-                          />
-                        </div>
+                <!-- social links -->
+                <div class="flex space-x-3 mb-3">
+                  <div class="w-full">
+                    <!-- website  link  -->
+                    <div class="mb-3">
+                      <div class="relative mb-6">
+
+                        <input data-th-field="*{websiteLink}"
+                          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                          placeholder="htt://learncodewithdurgesh.com/" />
                       </div>
                     </div>
                   </div>
+                  <div class="w-full">
+                    <!-- linkedin  link  -->
+                    <div class="mb-3">
+                      <div class="relative mb-6">
 
-                  <!-- contact image field -->
-                  <div class="mb-3">
-                    <label
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                      for="large_size"
-                      >Contact Image</label
-                    >
-                    <input
-                      class="block w-full mb-5 text-xs text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
-                      id="large_size"
-                      type="file"
-                    />
+                        <input type="text" data-th-field="*{linkedInLink}"
+                          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                          placeholder="htt://learncodewithdurgesh.com/" />
+                      </div>
+                    </div>
                   </div>
+                </div>
 
-                  <!-- favorite checkbox -->
+                <!-- contact image field -->
+                <div class="mb-3">
+                  <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="large_size">Contact
+                    Image</label>
+                  <input
+                    class="block w-full mb-5 text-xs text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
+                    id="large_size" type="file" />
+                </div>
 
-                  <div class="flex items-center mb-3">
-                    <input
-                      id="default-checkbox"
-                      type="checkbox"
-                      value=""
-                      class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                    />
-                    <label
-                      for="default-checkbox"
-                      class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-                      >Is this contact is your favorite one ?</label
-                    >
-                  </div>
+                <!-- favorite checkbox -->
 
-                  <div class="button-container text-center">
-                    <button
-                      type="submit"
-                      class="px-3 py-2 rounded bg-gray-800 hover:bg-gray text-white dark:bg-blue-800 dark:hover:bg-blue-800"
-                    >
-                      Add Contact
-                    </button>
-                    <button
-                      type="reset"
-                      class="px-3 py-2 rounded bg-gray-800 hover:bg-gray text-white dark:bg-blue-800 dark:hover:bg-blue-800"
-                    >
-                      Reset
-                    </button>
-                  </div>
-                </form>
-              </div>
+                <div class="flex items-center mb-3">
+                  <input data-th-field="*{favorite}" type="checkbox" value=""
+                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" />
+                  <label for="default-checkbox" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Is
+                    this contact is your favorite one ?</label>
+                </div>
+
+                <div class="button-container text-center">
+                  <button type="submit"
+                    class="px-3 py-2 rounded bg-gray-800 hover:bg-gray text-white dark:bg-blue-800 dark:hover:bg-blue-800">
+                    Add Contact
+                  </button>
+                  <button type="reset"
+                    class="px-3 py-2 rounded bg-gray-800 hover:bg-gray text-white dark:bg-blue-800 dark:hover:bg-blue-800">
+                    Reset
+                  </button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script>
-      console.log("this is profile page");
-    </script>
-  </body>
+  <script>
+    console.log("this is profile page");
+  </script>
+</body>
+
 </html>
