--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -27,8 +27,13 @@
                 this client from scm.
               </p>
 
-              <form action="" class="mt-8 p-6" data-th-action="@{'/user/contacts/add'}" data-th-object="${contactForm}"
-                method="post">
+              <form 
+              action="" 
+              class="mt-8 p-6" 
+              data-th-action="@{'/user/contacts/add'}" 
+              data-th-object="${contactForm}"
+              enctype="multipart/form-data"
+              method="post">
                 <!-- name form -->
                 <div class="mb-3">
                   <label for="input-group-1"
@@ -144,6 +149,7 @@
                   <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="large_size">Contact
                     Image</label>
                   <input
+                  data-th-field="*{contactImagFile}"
                     class="block w-full mb-5 text-xs text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
                     id="large_size" type="file" />
                 </div>
