--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -1,48 +1,63 @@
 <!DOCTYPE html>
-<html lang="en" th:replace="~{base :: parent(~{::#content},~{::title},~{::script})}">
+<html
+  lang="en"
+  th:replace="~{base :: parent(~{::#content},~{::title},~{::script})}"
+>
+  <head>
+    <title>Add Contact</title>
+  </head>
+  <body>
+    <div id="content">
+      <!-- sidebar -->
 
-<head>
-  <title>Add Contact</title>
-</head>
+      <!-- user is logged in : sidebar -->
 
-<body>
-  <div id="content">
-    <!-- sidebar -->
+      <div th:if="${loggedInUser}">
+        <div data-th-replace="~{user/sidebar :: sidebar}"></div>
+      </div>
 
-    <!-- user is logged in : sidebar -->
-    <div th:if="${loggedInUser}">
-      <div data-th-replace="~{user/sidebar :: sidebar}"></div>
-    </div>
-    <div class=" flex justify-center   pt-16 ">
-      <div class="max-w-3 h-auto" >
-        <div class="grid grid-cols-10">
-          <div class="col-span-3 pt-4"></div>
-          <div class="col-span-12 md:col-span-6 ">
+      <div class="sm:pl-64 pt-20" style="height: 1000px">
+        <div class="grid grid-cols-12">
+          <div class="col-span-3"></div>
+          <div class="col-span-12 md:col-span-6">
             <div
-              class="card z-40 block p-16 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+              class="card block p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+            >
               <div data-th-replace="message::messagebox"></div>
-              <h1 class=" pt-2 text-2xl font-semibold p-5">Add New Contact</h1>
-              <p class="text-gray-500 p-5">
-                This contact will be stored on cloud, you can direct email
-                this client from scm.
+
+              <h1 class="text-2xl font-semibold">Add New Contact</h1>
+              <p class="text-gray-500">
+                This contact will be stored on cloud, you can direct email this
+                client from scm...
               </p>
 
-              <form 
-              action="" 
-              class="mt-8 p-6" 
-              data-th-action="@{'/user/contacts/add'}" 
-              data-th-object="${contactForm}"
-              enctype="multipart/form-data"
-              method="post">
+              <form
+                action=""
+                class="mt-8"
+                data-th-action="@{'/user/contacts/add'}"
+                data-th-object="${contactForm}"
+                method="post"
+                enctype="multipart/form-data"
+              >
                 <!-- name form -->
                 <div class="mb-3">
-                  <label for="input-group-1"
-                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact Name</label>
-                  <div class="relative mb-6 ">
-
-                    <input type="text" data-th-field="*{name}"
+                  <label
+                    for="input-group-1"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                    >Contact Name</label
+                  >
+                  <div class="relative mb-1">
+                    <div
+                      class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
+                    >
+                      <i class="fa-regular w-4 h-4 fa-user"></i>
+                    </div>
+                    <input
+                      data-th-field="*{name}"
+                      type="text"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                      placeholder="name" />
+                      placeholder="name"
+                    />
                   </div>
                   <p
                     class="text-red-500"
@@ -55,13 +70,23 @@
 
                 <!-- email form -->
                 <div class="mb-3">
-                  <label for="input-group-1"
-                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact Email</label>
-                  <div class="relative mb-6">
-
-                    <input type="text" data-th-field="*{email}"
+                  <label
+                    for="input-group-1"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                    >Contact Email</label
+                  >
+                  <div class="relative mb-1">
+                    <div
+                      class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
+                    >
+                      <i class="fa-regular w-4 h-4 fa-envelope"></i>
+                    </div>
+                    <input
+                      type="text"
+                      data-th-field="*{email}"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                      placeholder="example@gmail.com" />
+                      placeholder="example@gmail.com"
+                    />
                   </div>
                   <p
                     class="text-red-500"
@@ -74,13 +99,23 @@
 
                 <!-- phone number  -->
                 <div class="mb-3">
-                  <label for="input-group-1"
-                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact Phone</label>
-                  <div class="relative mb-6">
-
-                    <input type="text" data-th-field="*{phoneNumber}"
+                  <label
+                    for="input-group-1"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                    >Contact Phone</label
+                  >
+                  <div class="relative mb-1">
+                    <div
+                      class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
+                    >
+                      <i class="fa-solid w-4 h-4 fa-phone"></i>
+                    </div>
+                    <input
+                      data-th-field="*{phoneNumber}"
+                      type="text"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                      placeholder="9823525525" />
+                      placeholder="9823525525"
+                    />
                   </div>
                   <p
                     class="text-red-500"
@@ -94,12 +129,18 @@
                 <!-- address -->
 
                 <div class="mb-3">
-                  <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact
-                    Address</label>
-                  <textarea data-th-field="*{address}" rows="4"
+                  <label
+                    for="message"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                    >Contact Address</label
+                  >
+                  <textarea
+                    data-th-field="*{address}"
+                    rows="4"
                     class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    placeholder="Address of the contact"></textarea>
-                    <p
+                    placeholder="Address of the contact"
+                  ></textarea>
+                  <p
                     class="text-red-500"
                     data-th-if="${#fields.hasErrors('address')}"
                     data-th-errors="*{address}"
@@ -111,11 +152,17 @@
                 <!-- description -->
 
                 <div class="mb-3">
-                  <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact
-                    Description</label>
-                  <textarea data-th-field="*{description}" rows="4"
+                  <label
+                    for="message"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                    >Contact Description</label
+                  >
+                  <textarea
+                    data-th-field="*{description}"
+                    rows="4"
                     class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    placeholder="Write about your contact"></textarea>
+                    placeholder="Write about your contact"
+                  ></textarea>
                 </div>
 
                 <!-- social links -->
@@ -124,10 +171,16 @@
                     <!-- website  link  -->
                     <div class="mb-3">
                       <div class="relative mb-6">
-
-                        <input data-th-field="*{websiteLink}"
+                        <div
+                          class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
+                        >
+                          <i class="fa-solid w-4 h-4 fa-earth-americas"></i>
+                        </div>
+                        <input
+                          data-th-field="*{websiteLink}"
                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                          placeholder="htt://learncodewithdurgesh.com/" />
+                          placeholder="htt://learncodewithdurgesh.com/"
+                        />
                       </div>
                     </div>
                   </div>
@@ -135,45 +188,69 @@
                     <!-- linkedin  link  -->
                     <div class="mb-3">
                       <div class="relative mb-6">
-
-                        <input type="text" data-th-field="*{linkedInLink}"
+                        <div
+                          class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
+                        >
+                          <i class="fa-brands w-4 h-4 fa-linkedin"></i>
+                        </div>
+                        <input
+                          type="text"
+                          data-th-field="*{linkedInLink}"
                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                          placeholder="htt://learncodewithdurgesh.com/" />
+                          placeholder="htt://learncodewithdurgesh.com/"
+                        />
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <!-- contact image field -->
-                <div class="mb-3 ">
-                  <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="large_size">Contact
-                    Image</label>
+                <div class="mb-3">
+                  <label
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                    for="large_size"
+                    >Contact Image</label
+                  >
                   <input
                   id="image_file_input"
                     data-th-field="*{contactImagFile}"
                     class="block w-full mb-5 text-xs text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
                     type="file" />
-                    <img src="" id="uploadImage" class="hidden"/>
-                  
+
+                  <img
+                    class="max-h-52 mx-auto rounded-lg shadow m-3"
+                    src=""
+                    id="upload_image_preview"
+                    alt=""
+                  />
                 </div>
-                
 
                 <!-- favorite checkbox -->
 
                 <div class="flex items-center mb-3">
-                  <input data-th-field="*{favorite}" type="checkbox" value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" />
-                  <label for="default-checkbox" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Is
-                    this contact is your favorite one ?</label>
+                  <input
+                    data-th-field="*{favorite}"
+                    type="checkbox"
+                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+                  />
+                  <label
+                    for="default-checkbox"
+                    class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+                    >Is this contact is your favorite one ?</label
+                  >
                 </div>
 
                 <div class="button-container text-center">
-                  <button type="submit"
-                    class="px-3 py-2 rounded bg-gray-800 hover:bg-gray text-white dark:bg-blue-800 dark:hover:bg-blue-800">
+                  <button
+                    type="submit"
+                    class="px-3 py-2 dark:bg-blue-600 hover:dark:bg-blue-700 rounded bg-black text-white"
+                  >
                     Add Contact
                   </button>
-                  <button type="reset"
-                    class="px-3 py-2 rounded bg-gray-800 hover:bg-gray text-white dark:bg-blue-800 dark:hover:bg-blue-800">
+                  <button
+                    type="reset"
+                    class="px-3 py-2 dark:bg-blue-600 hover:dark:bg-blue-700 rounded bg-black text-white"
+                  >
                     Reset
                   </button>
                 </div>
@@ -183,12 +260,11 @@
         </div>
       </div>
     </div>
-  </div>
+    
 
-  <script data-th-src="@{'/js/admin.js'}"></script>
-  <script>
-    console.log("this is profile page");
-  </script>
-</body>
-
+    <script data-th-src="@{'/js/admin.js'}"></script>
+    <script>
+      console.log("this is profile page");
+    </script>
+  </body>
 </html>
